--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/icn"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ui.activity.carts.CartsActivity"></activity>
+        <activity android:name=".ui.activity.product.ProductActivity" />
+        <activity android:name=".ui.activity.products.ProductsActivity" />
         <activity android:name=".ui.activity.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,14 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="com.here.sdk.access_key_id"
-            android:value="@string/here_access_key_id" />
-        <meta-data
-            android:name="com.here.sdk.access_key_secret"
-            android:value="@string/here_access_key_secret" />
-
     </application>
 
 </manifest>
