--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.checkout.CheckoutActivity"></activity>
+        <activity android:name=".ui.activity.transaction.TransactionActivity"></activity>
+        <activity android:name=".ui.activity.checkout.CheckoutActivity" />
         <activity android:name=".ui.activity.setAddress.SetAddressActivity" />
         <activity android:name=".ui.activity.search.SearchResultActivity" />
         <activity android:name=".ui.activity.carts.CartsActivity" />
