--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
 
+    // circle indicator
+    implementation 'me.relex:circleindicator:2.1.4'
+
 }
 kapt {
     generateStubs = true
